--- a/style.css
+++ b/style.css
@@ -362,6 +362,7 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
 }
 
 .link-hotspot-tooltip {
+  display: none;
   position: absolute;
   left: 100%;
   top: 14px; /* ( 60 - (16 + 2*8) ) / 2 */
@@ -434,7 +435,7 @@ body.single-scene #sceneList, body.single-scene #sceneListToggle {
 
 .info-hotspot {
   line-height: 1.2em;
-  opacity: 0.9;
+  opacity: 0.1;
   -webkit-transition: opacity 0.2s 0.2s;
   transition: opacity 0.2s 0.2s;
 }
